# AoC

./: .gitignore  2015-py3.ipynb  2017-py3.ipynb  2018-py3.ipynb  2018.ipynb  2019-py3.ipynb  2020-py3.ipynb  2021-py3.ipynb  2022-py3.ipynb  2023-py3.ipynb  Makefile  README.md  Scratch.ipynb  day15-2.py  day15.py  pyproject.toml  worker.py
.ipynb_checkpoints/: 2016-py3-checkpoint.ipynb  2018-checkpoint.ipynb  2018-py3-checkpoint.ipynb  2019-py3-checkpoint.ipynb  2020-py3-checkpoint.ipynb  2021-py3-checkpoint.ipynb  2022-py3-checkpoint.ipynb  2023-py3-checkpoint.ipynb  Scratch-checkpoint.ipynb
2020 screenshots/: README.MD
helpers/: .editorconfig  __init__.py  aoc.py  files.py  functional.py  iters.py  searches.py  timings.py
helpers/grids/: __init__.py  rc.py  shared.py  xy.py
y2018/day10/: part1
y2019/: machine.py
y2019/day1/: part1
