[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^0.17.0"
multiprocess = "^0.70.11"
advent-of-code-data = "^1.1.0"
browser-cookie3 = "^0.13.0"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
