[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
multiprocess = "^0.70.14"
advent-of-code-data = "^1.2.0"
browser-cookie3 = "^0.16.2"
notebook = "^6.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
