[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
multiprocess = "^0.70.15"
browser-cookie3 = "^0.19.1"
notebook = "^7.0.6"
advent-of-code-data = {extras = ["nb"], version = "^2.0.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
